# spark-envio-indexer

./: .env-example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  biome.json  config.yaml  example.env  index.html  order_checker.rs  package.json  pnpm-lock.yaml  schema.graphql  shell.nix  tsconfig.json
abis/: registry.json  spark-orderbook.json
src/: OrderBookHandlers.ts  indexer.js  indexer.ts  resolvers.js  resolvers.ts  utils.ts
src/handlers/: cancelOrderEventHandler.ts  depositEventHandler.ts  depositForEventHandler.ts  index.ts  marketRegisterEventHandler.ts  matchOrderEventHandler.ts  openOrderEventHandler.ts  tradeOrderEventHandler.ts  withdrawEventHandler.ts  withdrawToMarketEventHandler.ts
src/loaders/: cancelOrderEventLoader.ts  depositEventLoader.ts  index.ts  matchOrderEventLoader.ts  openOrderEventLoader.ts  tradeOrderEventLoader.ts  withdrawEventLoader.ts
src/utils/: getHash.ts  getISOTime.ts  marketConfig.ts
test/: Withdraw.ts
tests/: harness.rs
