[package]
name = "user-state"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["lzhabo <52199564+lzhabo@users.noreply.github.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.66.7", features = ["fuel-core-lib"] }
tokio = { version = "1.40.0", features = ["rt", "macros"] }
spark-market-sdk = { version = "0.6.2" }

[[test]]
harness = true
name = "integration_tests"
path = "order_checker.rs"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
serde = "1.0.204"
